# overseer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  symbols.toml  tailwind.config.js
migrations/: 001_data.sql  002_job_runs.sql  003_funding_liq.sql  004_users.sql  005_venue_volume.sql
src/core/: config.py  enums.py  models.py  symbols.py
src/data_collection/: base.py  http.py  ratelimit.py
src/data_collection/exchanges/: binance.py  bulk.py  bullet.py  bybit.py  extended.py  hyperliquid.py  lighter.py  registry.py  risex.py
src/scheduler/: jobs.py  main.py  notify.py  targets.py
src/storage/: mock.py  queries.py  writers.py
src/web/: __init__.py  auth.py
src/web/static/css/: app.css  assets.css
src/web/static/js/: lightweight-charts.standalone.js
src/web/templates/: base.html  basis.html  dashboard.html  funding.html  health.html  login.html  wallets.html
src/web/views/: api.py  pages.py
